# ml-segmentation-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
.github/workflows/src/segserve/api/: app.py
.github/workflows/src/segserve/api/src/segserve/api/: schemas.py
.github/workflows/src/segserve/core/: smoothing.py
.github/workflows/src/segserve/core/src/segserve/model/: sam_loader.py
.github/workflows/src/segserve/core/src/segserve/model/src/segserve/model/: predictor.py
data/: README.md
docker/: Dockerfile  entrypoint.sh
scripts/: download_sam_checkpoint.sh
